[package]
name = "aleven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.1.0-beta.4", features = ["llvm13-0"] }
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.24"
strum_macros = "0.24"
rustc-hash = "1.1.0"
byteorder = "1.4.3"
